<resources>
    <string name="app_name">MovieBD</string>
    <string name="content_description_image">Content Decription Image</string>
    <string name="more">More</string>
    <string name="setting">Settings</string>
    <string name="icon_menu">Icon Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="searchParameter">Search</string>
    <string name="movie">Movie</string>
    <string name="television">Television</string>
    <string name="people">People</string>
    <string name="genre">Genres</string>
    <string name="changes_24h">Changes 24h</string>
    <string name="notification">Information</string>
    <string name="rate">Rate</string>
    <string name="movie_popular">Movie Popular</string>
    <string name="movie_now_playing">Movie Now Playing</string>
    <string name="loading_data">Loading data  &#8230;</string>
    <string name="admin">Admin</string>
    <string name="company">Framgia Edu</string>
    <string name="movie_top_rated">Movie Top Rated</string>
    <string name="movie_upcoming">Movie Upcoming</string>
    <string name="add_facorites">Add to Favorites</string>
    <string name="input_keyword">Enter keywords</string>
    <string name="voice">Voice</string>
    <string name="search_movie">Search Movie</string>
    <string name="search_television">Search Television</string>
    <string name="multi_search">Multi Search</string>
    <string name="hr_horizontal">-</string>
    <string name="keyword_selection">Keyword selection</string>
    <string name="star">%.1f ★</string>
    <string name="release_date">Release Date : %s</string>
    <string name="first_air_date">First Air Date : %s</string>
    <string name="speech_prompt">Speak</string>
    <string name="toolbar_movie_genres_title">Movie selection</string>
    <string name="toolbar_television_genres_title">Television genre</string>
    <string name="comma">,</string>
    <string-array name="sort_by">
        <item>popularity.asc</item>
        <item>popularity.desc</item>
        <item>release_date.asc</item>
        <item>release_date.desc</item>
        <item>vote_count.asc</item>
        <item>vote_count.desc</item>
    </string-array>
    <string-array name="year">
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
    </string-array>
    <string name="text_star">★</string>
    <string name="date">28/02/2019</string>
    <string name="over_view">Over View</string>
    <string name="season">Seasons</string>
    <string name="all_season">All Season</string>
    <string name="recommendations">Recommendations</string>
    <string name="created_by">Featured Crew</string>
    <string name="trailers">Trailers</string>
    <string name="error">Error!</string>
    <string name="filter_search">Search filter</string>
    <string name="please_select_genre">Please select genre</string>
    <string name="companies">Companies</string>
    <string name="data_loading_more">See more list</string>
    <string name="favorites">Favorites</string>
    <string name="title_favorites">Favorites</string>
    <string name="add_movie_success">Add movie success</string>
    <string name="exits_movie">Exits movie</string>
    <string name="delete_movie">Delete movie</string>
    <string name="not_delete_movie_success">Not delete movie</string>
    <string name="deverlopping">Deverlopping</string>
    <string name="goto_favorites">Go to favorites</string>
</resources>
