<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_genres"
        android:icon="@drawable/ic_genres"
        android:title="@string/genre" />
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_changes"
        android:title="@string/favorites"
        app:actionViewClass="android.widget.TextView" />
    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/setting" />
        </menu>
    </item>
    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/action_rate"
                android:icon="@drawable/ic_rate"
                android:title="@string/rate" />
        </menu>
    </item>
</menu>
