<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_gallery"
    android:orientation="vertical"
    android:padding="@dimen/dp_20">

    <ImageView
        android:layout_width="@dimen/dp_64"
        android:layout_height="@dimen/dp_64"
        android:contentDescription="@string/content_description_image"
        android:src="@drawable/ic_profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company" />
</LinearLayout>
