<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.detail_movie.MovieDetailActivity">

    <FrameLayout
        android:id="@+id/frame_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_background"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_250"
            android:adjustViewBounds="true"
            android:scaleType="fitStart" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_250"
            android:background="@color/color_black_70" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_movie"
                android:layout_width="@dimen/dp_128"
                android:layout_height="@dimen/dp_150" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_12">

                <TextView
                    android:id="@+id/text_movie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_22"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_movie_name"
                    android:hint=""
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="italic" />

                <LinearLayout
                    android:id="@+id/linear_vote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_date"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_18" />

                    <TextView
                        android:id="@+id/text_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_18" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_star"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/sp_18" />
                </LinearLayout>

                <TextView
                    android:id="@+id/text_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linear_vote"
                    android:text="@string/genre"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:id="@+id/text_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_genre"
                    android:paddingLeft="@dimen/dp_12"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15"
                    android:textStyle="italic" />

                <ImageButton
                    android:id="@+id/button_love"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_love_off" />

            </RelativeLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/AppThemeNoActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ToolBar" />

        </android.support.design.widget.AppBarLayout>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_8dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/over_view"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_15" />

            <RelativeLayout
                android:id="@+id/relative_trailer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:padding="@dimen/dp_12">

                <TextView
                    android:id="@+id/text_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_200"
                    android:layout_below="@id/text_trailer"
                    android:background="@color/color_light_blue" />
            </RelativeLayout>

            <android.support.v7.widget.CardView
                style="@style/CardViewAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/relative_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_12">

                    <TextView
                        android:id="@+id/text_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/companies"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold" />


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_company"
                        android:background="@color/color_light_blue" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8dp">

                <RelativeLayout
                    android:id="@+id/relative_recommendations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_12">

                    <TextView
                        android:id="@+id/text_recommendations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recommendations"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/sp_20"
                        android:textStyle="bold" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_recommendations"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_recommendations"
                        android:background="@color/color_light_blue" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/dialog_loading"
        layout="@layout/dialog_loading" />
</RelativeLayout>
