<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="@style/CardViewAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_movies_popular"
                        style="@style/TextViewTitleCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_popular" />

                    <TextView
                        style="@style/TextViewMoreCardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/movies_popular"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/text_movies_popular" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_movies_now_playing"
                        style="@style/TextViewTitleCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_now_playing" />

                    <TextView
                        style="@style/TextViewMoreCardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/movies_now_playing"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/text_movies_now_playing" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_movies_top_rated"
                        style="@style/TextViewTitleCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_top_rated" />

                    <TextView
                        style="@style/TextViewMoreCardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/movies_top_rated"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/text_movies_top_rated" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardViewAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_movies_upcoming"
                        style="@style/TextViewTitleCardView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_upcoming" />

                    <TextView
                        style="@style/TextViewMoreCardView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/movies_upcoming"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/text_movies_upcoming" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/dialog_loading"
        layout="@layout/dialog_loading" />

</RelativeLayout>
